spade-tests/src/snapshots/spade_tests__typeinference__impl_of_constrained_param_is_not_usable_outside_constraints.snap
---
source: spade-tests/src/typeinference.rs
---
struct HasGeneric<T> {}

impl HasGeneric<bool> {
    fn requires_bool(self) {}
}

fn test() {
    let g = HasGeneric::<int<8>>();

    g.requires_bool()
}


error: `HasGeneric<int<8>>` has no method `requires_bool`
   ┌─ testinput:10:7
   │
10 │     g.requires_bool()
   │     --^^^^^^^^^^^^^--
   │     │ │
   │     │ No such method
   │     This has type `HasGeneric<int<8>>`
   │
   = help: The method exists for `HasGeneric<bool>`
